fix (extra padding)

--- a/styles/pilotos.css
+++ b/styles/pilotos.css
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr));
   gap: 2rem;
-  padding: 1rem;
 }
 
 .pilotos__piloto {
